--- a/styles/index.css
+++ b/styles/index.css
@@ -57,6 +57,7 @@ header{
   padding: 30px 20px;
   background-color: var(--background-surface);
   box-shadow: 10px 0px 10px var(--background);
+  transition: .4s;
 }
 
 header h1{
@@ -66,15 +67,46 @@ header h1{
   padding-bottom: 5px;
 }
 
+#today-matches-section{
+  border-bottom: 1px solid var(--background-surface);
+  transition: .4s;
+}
+
+#todays-matches-header{
+  display: flex;
+  align-items: center;
+  margin: 10px 5px;
+  gap: 15px;
+  
+}
+
 #todays-matches-title{
   font-size: 30px;
   margin: 20px;
+}
+
+.todays-matches-btn{
+  width: 100px;
+  height: 40px;
+  background-color: var(--background-surface);
+  border: none;
+  border-radius: 10px;
+  color: var(--text);
+  font-weight: 700;
+  font-size: 15px;
+}
+
+.todays-matches-btn:hover{
+  cursor: pointer;
+  color: #000;
+  background-image: var(--main-gradient);
 }
 
 .todays-matches{
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .div-match{
@@ -87,6 +119,7 @@ header h1{
   border-radius: 10px;
   box-shadow: 10px 0px 10px var(--background);
   text-align: center;
+  transition: .4s;
 }
 
 .div-match div{
