--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,8 @@
 
   --primary-color:#5effac;
   --secondary-color:#fcff67;
-  --error-color: #d45059;
+  --error-color: #610000;
+  --error-text-color: #fff;
 
   --background: #121212;
   --background-surface: #1f1f1f;
@@ -29,7 +30,8 @@
 
   --primary-color:#5effac;
   --secondary-color:#fcff67;
-  --error-color: #d45059;
+  --error-color: #ff0000;
+  --error-text-color: #fff;
 
   --background: #e6e6e6;
   --background-surface: #ffffff;
@@ -67,48 +69,6 @@ header h1{
   padding-bottom: 5px;
 }
 
-#today-matches-section{
-  border-bottom: 1px solid var(--background-surface);
-  transition: .4s;
-}
-
-#todays-matches-header{
-  display: flex;
-  align-items: center;
-  margin: 10px 5px;
-  gap: 15px;
-  
-}
-
-#todays-matches-title{
-  font-size: 30px;
-  margin: 20px;
-}
-
-.todays-matches-btn{
-  width: 100px;
-  height: 40px;
-  background-color: var(--background-surface);
-  border: none;
-  border-radius: 10px;
-  color: var(--text);
-  font-weight: 700;
-  font-size: 15px;
-}
-
-.todays-matches-btn:hover{
-  cursor: pointer;
-  color: #000;
-  background-image: var(--main-gradient);
-}
-
-.todays-matches{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-}
-
 .div-match{
   display: flex;
   flex-direction: column;
@@ -132,9 +92,10 @@ header h1{
   width: 30px;
 }
 
-#main-leagues-title{
+.leagues-title{
   font-size: 30px;
   margin: 20px;
+  transition: .4s;
 }
 
 .main-leagues{
@@ -143,6 +104,8 @@ header h1{
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 5px;
   row-gap: 5px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid var(--background-surface);
 }
 
 .div-leagues{
@@ -179,6 +142,33 @@ header h1{
 .div-leagues:hover{
   cursor: pointer;
   box-shadow: inset 0 0 300px 250px rgba(255, 255, 255, 0.2);
+}
+
+
+.error-league{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  color: var(--error-text-color);
+  width: calc(100% - 45px);
+  height: 250px;
+  padding: 20px;
+  background-color: var(--error-color);
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  transition: 0.4s;
+}
+
+.error-league img{
+  width: 10em;
+  filter: drop-shadow(0px 0px 5px rgba( 255, 255, 255, 0.1));
+}
+
+.error-league p{
+  font-size: 25px;
 }
 
 
